--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+h1{
+  font-family: 'Acme', sans-serif;
+
+}
+h2{
+
+}
+h3{
+  text-align: center;
+  font-family: 'EB Garamond', serif;
+}
+.why{
+  font-size: 20px;
+  font-family: 'Charm', cursive;
+}
+
+
 .jumbotron{
 
 }
