--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ h3{
   text-align: center;
   font-family: 'EB Garamond', serif;
 }
+.about{
+  font-size: 20px;
+  font-family: 'Charm', cursive;
+}
 .why{
   font-size: 20px;
   font-family: 'Charm', cursive;
@@ -24,11 +28,13 @@ h3{
   font-size: 17px;
   text-align: center;
   font-family: 'Inconsolata', monospace;
+  color: black;
 }
 .background-title{
   font-size: 25px;
   text-align: center;
   font-family: 'Inconsolata', monospace;
+  color: #007e72;
 }
 .interests .title{
   text-align: center;
@@ -58,4 +64,11 @@ h3{
 }
 #Panel_Image{
   align-items: center;
+}
+
+.panel-success > .panel-heading{
+  background-color: #90f2e8;
+}
+.panel-info > .panel-heading{
+  background-color: #d4bbdd;
 }
